re-package rest model